# ky-sql

./: .gitignore  CMakeLists.txt  README.md  build  log0.txt  mahiko  noop.kysql  readme.md  run  spec.md  test
docs/: data-section.md  engine.md  spec.md
logs/: example-logs-00.txt  log0.txt
src/: CMakeLists.txt  config.c  dtypes.h  log.c  main  main.c  parse.c  test.c  tests.c  token.c  utilities.c  utilities_test.c
src/Examples/: 00_filemetadata.c  01_datasection.c  CMakeLists.txt
src/Headers/: log.h
src/Labs/: 00_filemetadata.c
src/Lang/: CMakeLists.txt  language.h  language_insert.c  language_query.c
src/Lang/include/: language_insert.h  language_query.h
src/Language/: CMakeLists.txt  language.h  language_insert.c  language_query.c
src/Metadata/: CMakeLists.txt  metadata.c  metadata.h  metadata_default.c  metadata_extraction.c  metadata_extraction.h  metadata_offsets.c  metadata_offsets.h  metadata_schema.c  metadata_schema.h  metadata_storage.c  out
src/Metadata/include/: metadata_default.h  metadata_extraction.h  metadata_schema.h  metadata_storage.h
src/Mocks/: Bookstore.sql  CMakeLists.txt  mock_metadata_defintions.c  mocks.h  mocks_insert_statements.c  mocks_metadata_defintions.c  mocks_query_statements.c
src/Reader/: CMakeLists.txt  reader.c  reader.h  reader_data_block.c  reader_file.c
src/Reader/include/: reader_data_block.h  reader_file.h
src/Shared/: shared.h
src/Shell/: CMakeLists.txt  shell_tables.c  shell_tables.h
src/Translation/: CMakeLists.txt  separate_ns_character_blocks.c  translation.c  translation.h  translation_context.c  translation_insert.c  translation_query.c
src/Translation/include/: translation_context.h  translation_insert.h  translation_query.h
src/Types/: CMakeLists.txt  data_block_type.c  data_block_type.h  types.h
src/Utilities/: CMakeLists.txt  allocation.c  allocation.h  count.c  now_default_value.c  null_guard_str.c  utilities.h
src/Utilities/include/: allocation.h  count.h  now_default_value.h  null_guard_str.h
src/Writer/: CMakeLists.txt  writer.c  writer.h  writer_col.c  writer_data_block.c  writer_file.c  writer_size.c
src/Writer/include/: writer_col.h  writer_data_block.h  writer_file.h  writer_size.h
src/headers/: log.h
src/mahiko/: logging.c  testing.c  testing.h
src/mahiko/headers/: logging.h  testing.h
src/main.dSYM/Contents/Resources/DWARF/: main
src/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
src/metadata/: metadata_extraction.c  metadata_schema.c  noop.kysql  out
